# iiif_ocr

./: README.md  pyproject.toml
src/: command.py  hocr.py  iiif_models.py  iiif_ocr.py  process.py
src/utils/: __init__.py
