[project]
name = "iiif-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.19"
dependencies = [
    "click>=8.3.1",
    "easyocr>=1.7.2",
    "minihtml>=0.2.3",
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.3.0",
    "pillow==9.5.0",
    "pytesseract>=0.3.13",
    "requests>=2.32.5",
    "ruff>=0.14.10",
    "torchvision>=0.24.1",
]

[tool.uv]
package = true

[tool.ruff]
indent-width = 2
line-length = 120


[tool.ruff.format]
quote-style = "single"

[project.scripts]
iiif_ocr = "command:main"
